--- a/frontend/reddit-clone-ui/src/app/core/components/reddit-post-extra-footer-buttons/reddit-post-extra-footer-buttons.component.html
+++ b/frontend/reddit-clone-ui/src/app/core/components/reddit-post-extra-footer-buttons/reddit-post-extra-footer-buttons.component.html
@@ -10,6 +10,7 @@
   cdkConnectedOverlay
   [cdkConnectedOverlayOrigin]="trigger"
   [cdkConnectedOverlayOpen]="isOpen"
+  [@inOutAnimation]
 >
   <ul class="extra-footer-buttons-overlay">
     <li class="extra-footer-button" (click)="isOpen = !isOpen" matRipple>
