--- a/frontend/reddit-clone-ui/src/app/modules/home/pages/create-post-page/create-post-page.component.html
+++ b/frontend/reddit-clone-ui/src/app/modules/home/pages/create-post-page/create-post-page.component.html
@@ -63,6 +63,13 @@
         </form>
       </mat-tab>
     </mat-tab-group>
+
+    <mat-chip-listbox aria-label="Content type">
+      <mat-chip-option>OC</mat-chip-option>
+      <mat-chip-option>Spoiler</mat-chip-option>
+      <mat-chip-option>NSFW</mat-chip-option>
+      <mat-chip-option>Flair</mat-chip-option>
+    </mat-chip-listbox>
   </div>
 
   <div class="right-side">
